--- a/Website/Views/Index/Create.cshtml
+++ b/Website/Views/Index/Create.cshtml
@@ -1,4 +1,7 @@
 ﻿@model Website.Models.IndexDetailModel
+@{
+    Layout = null;
+}
 <h2>Index URL</h2>
 <div class="form" style="width: 600px;display: table-cell;">
     <div class="validation-summary-valid text-danger" data-valmsg-summary="true" id="messagePanel">
